--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="previous">Previous</string>
     <string name="next">Next</string>
+
+    <string name="default_notification_channel_id">channel_id</string>
+    <string name="default_notification_channel_name">channel_name</string>
 </resources>
